--- a/Tm_Creations.html
+++ b/Tm_Creations.html
@@ -175,6 +175,7 @@ Follow us on social media for tips, samples, and special offers.
 
   </main>
 
+ 
   <footer id="footer" class="footer position-relative light-background">
 
     <div class="container">
@@ -186,7 +187,7 @@ Follow us on social media for tips, samples, and special offers.
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">Thilina Manoj</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        Designed by <a href="https://thilinamanoj.netlify.app/tm_solutions">TM Solutions</a> Distributed by <a href="https://thilinamanoj.netlify.app/">Thilina Manoj</a>
       </div>
     </div>
 
