--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -179,18 +179,19 @@
 
   </main>
 
+ 
   <footer id="footer" class="footer position-relative light-background">
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+        <p>©2025<span>Copyright</span> <strong class="px-1 sitename">Thilina Manoj | Portfolio</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        Designed by <a href="https://thilinamanoj.netlify.app/tm_solutions">TM Solutions</a> Distributed by <a href="https://thilinamanoj.netlify.app/">Thilina Manoj</a>
       </div>
     </div>
 
