--- a/index.html
+++ b/index.html
@@ -959,6 +959,12 @@
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
                   <button type="submit">Send Message</button>
+                  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script type="text/javascript">
+  (function() {
+    emailjs.init("YOUR_PUBLIC_KEY"); // 🔑 Replace with your actual EmailJS Public Key
+  })();
+</script>
                 </div>
 
               </div>
