--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63398.74643591357!2d80.1860385!3d7.5099542!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae32f007d87f1dd%3A0xf4058efa245c7c4d!2sThelahera%20amuwaththa%20society%20Hall!5e0!3m2!1sen!2slk!4v1718862529382!5m2!1sen!2slk" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/place/MANO+House(Thilina+Manoj)/@7.5121683,80.1946865,17z/data=!4m14!1m7!3m6!1s0x3ae32f000b8e9b21:0xaecd633f4209a785!2sMANO+House(Thilina+Manoj)!8m2!3d7.512163!4d80.1972614!16s%2Fg%2F11y0gvlxng!3m5!1s0x3ae32f000b8e9b21:0xaecd633f4209a785!8m2!3d7.512163!4d80.1972614!16s%2Fg%2F11y0gvlxng?authuser=0&entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"></iframe>
             </div>
           </div>
           
@@ -1372,5 +1372,6 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
