--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="G56W+VW Katupotha"></iframe>
+              <iframe src="https://maps.app.goo.gl/zmfHwUgM5cs4o2gC8"></iframe>
             </div>
           </div>
           
