--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://maps.app.goo.gl/zmfHwUgM5cs4o2gC8"></iframe>
+              <iframe src="https://www.google.com/maps/place/MANO+House(Thilina+Manoj)/@7.512284,80.1969234,19z/data=!4m6!3m5!1s0x3ae32f000b8e9b21:0xaecd633f4209a785!8m2!3d7.512163!4d80.1972614!16s%2Fg%2F11y0gvlxng?authuser=0&entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"></iframe>
             </div>
           </div>
           
@@ -1375,4 +1375,5 @@
 
 
 </html>
+
 
