--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <iframe src="https://www.google.com/maps/place/MANO+House(Thilina+Manoj)/@7.512284,80.1969234,19z/data=!4m6!3m5!1s0x3ae32f000b8e9b21:0xaecd633f4209a785!8m2!3d7.512163!4d80.1972614!16s%2Fg%2F11y0gvlxng?authuser=0&entry=ttu&g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D"></iframe>
+              <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d988.8932820581191!2d80.1969234!3d7.512284!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae32f000b8e9b21%3A0xaecd633f4209a785!2sMANO%20House(Thilina%20Manoj)!5e0!3m2!1sen!2slk!4v1762036596964!5m2!1sen!2slk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"></iframe>
             </div>
           </div>
           
@@ -1375,5 +1375,6 @@
 
 
 </html>
+
 
 
